--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,12 @@
-
+@import "jqvmap/jqvmap/jqvmap";
+@import "bootstrap";
 
 body {
-  background-image: url(images/logo.png);
+  background-image: url("images/logo.png");
   background-repeat: no-repeat;
   background-position: center 5px;
   background-size: auto 75px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 img {
@@ -17,11 +18,13 @@ h1 {
   font-size: 1.5em;
   margin-top: 1.5em;
 }
+
 h2 {
   font-size: 1em;
 }
 
-dt, dd {
+dt,
+dd {
   display: inline-block;
   vertical-align: middle;
   line-height: 30px;
@@ -39,18 +42,21 @@ dd {
 .green {
   background-color: #a4d59d;
 }
+
 .blue {
   background-color: #7da7da;
 }
+
 .yellow {
   background-color: #fef999;
 }
+
 .orange {
   background-color: #fcb05d;
 }
 
 .cursive {
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
 .polaroid {
