--- a/src/html/partials/layout.hbs
+++ b/src/html/partials/layout.hbs
@@ -12,21 +12,7 @@
 <body>
 
   {{#block 'nav'}}
-    <nav class="navbar">
-      <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar">
-        &#9776;
-      </button>
-      <div class="collapse navbar-toggleable-xs" id="navbar">
-          <br><br>
-          <div class="list-group">
-            <a class="list-group-item" href="help.html">How to Help</a>
-            <a class="list-group-item" href="support.html">Share Your Support</a>
-            <a class="list-group-item" href="species.html">Primate Species: Pet vs. Wild</a>
-            <a class="list-group-item" href="states.html">What's Happening In Your State?</a>
-          </div>
-          <a class="navbar-brand" href="#"></a>
-      </div>
-    </nav>
+    {{>nav}}
   {{/block}}
 
   {{{block 'main'}}}
