--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,42 @@
+@import 'https://fonts.googleapis.com/css?family=Open+Sans';
 @import url(~sanitize.css/sanitize.css);
 
+html,
 body {
-  padding: 2em;
-  background-color: #fff;
+  margin: 0;
+  padding: 0;
+  background-color: #544b3d;
+  font-family: 'Open Sans', sans-serif;
+  color: #042f32;
+}
+
+a {
+  font-weight: bold;
+  color: #042f32;
+}
+
+p4p-app-shell {
+  position: relative;
+}
+
+.p4p-nav {
+  display: block;
+  position: absolute;
+  width: 75%;
+  left: -75%;
+  top: 0;
+  bottom: 0;
+  transition: all .5s;
+  background-color: #fd7d26;
+}
+
+.p4p-nav-open {
+  left: 0;
+}
+
+header {
+  background-color: #fd7d26;
+  padding: .5em;
 }
 
 .reset-ul {
@@ -14,5 +48,44 @@ body {
 .reset-li {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: .5em 0;
 }
+
+.nav-ul {
+  margin: 1em;
+}
+
+.nav-ul a {
+  text-decoration: none;
+}
+
+.p4p-header h1 {
+  font-size: 20px;
+  padding: 0;
+  margin: 0 0 0 .65em;
+}
+
+.p4p-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.p4p-monkey {
+  height: 50px;
+  width: auto;
+  margin-left: 1em;
+}
+
+.p4p-toggle-menu {
+  margin-top: -7px;
+  height: 20px;
+  width: 20px;
+}
+
+main {
+  color: #a7c681;
+  padding: 1em;
+  position: relative;
+}
+
