--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans';
-@import url(~sanitize.css/sanitize.css);
+@import '~tachyons';
 
 html,
 body {
