--- a/src/species/index.css
+++ b/src/species/index.css
@@ -4,13 +4,13 @@
   width: 30%;
 }
 
-.p4p-content-species .reset-li {
+.p4-content-species .reset-li {
   background-color: #7d4900;
   padding: 0;
   margin: .5em 0;
 }
 
-.p4p-content-species div {
+.p4-content-species div {
   width: 65%;
   display: inline-block;
   padding: 0 1em;
