--- a/src/app/header/index.css
+++ b/src/app/header/index.css
@@ -1,30 +1,30 @@
-header {
+.header {
   background-color: #fd7d26;
-  padding: .5em;
-}
-
-
-.p4-header h1 {
-  font-size: 20px;
-  padding: 0;
-  margin: 0 0 0 .65em;
-}
-
-.p4-header {
   display: flex;
+  padding: 0.5em 0;
   align-items: center;
-  justify-content: space-between;
+  height: 75px;
+  overflow: hidden;
 }
 
-.p4-monkey {
-  height: 50px;
-  width: auto;
+.header button {
+  font-size: 40px;
+  font-weight: normal;
+  width: 50px;
+  text-align: center;
+  overflow: hidden;
+  margin-left: -25px;
+}
+
+.header h1 {
   margin-left: 1em;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
-
-.p4-toggle-menu {
-  margin-top: -7px;
-  height: 20px;
-  width: 20px;
+.header .monkey {
+  min-width: 30px;
+  max-width: 50px;
+  height: auto;
+  margin-right: 1em;
 }
