--- a/src/app/nav/index.css
+++ b/src/app/nav/index.css
@@ -1,24 +1,25 @@
-
-.p4-nav {
+.nav {
   z-index: 2;
   display: block;
   position: absolute;
-  width: 75%;
-  left: -75%;
-  top: 0;
+  width: 100%;
+  left: -100%;
+  top: 75px;
   bottom: 0;
-  transition: all .5s;
-  background-color: #fd7d26;
+  transition: all 0.5s;
+  background-color: #544b3e;
 }
 
-.p4-nav-open {
+.nav-open {
   left: 0;
 }
 
-.nav-ul {
-  margin: 1em;
+.nav li {
+  margin: 2em 0;
 }
 
-.nav-ul a {
+.nav a {
+  color: #a7c681;
   text-decoration: none;
+  font-size: 20px;
 }
