--- a/src/app/header/index.css
+++ b/src/app/header/index.css
@@ -1,8 +1,6 @@
 .header {
+  position: relative;
   background-color: #fd7d26;
-  display: flex;
-  padding: 0.5em 0;
-  align-items: center;
   height: 75px;
   overflow: hidden;
 }
@@ -12,12 +10,15 @@
   font-weight: normal;
   width: 50px;
   text-align: center;
-  overflow: hidden;
-  margin-left: -25px;
+  position: absolute;
+  top: 15px;
+  left: 10px;
 }
 
 .header h1 {
-  margin-left: 1em;
+  position: absolute;
+  top: 17px;
+  left: 70px;
   font-size: 20px;
   text-transform: uppercase;
 }
@@ -26,5 +27,7 @@
   min-width: 30px;
   max-width: 50px;
   height: auto;
-  margin-right: 1em;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
