--- a/src/app/header/index.css
+++ b/src/app/header/index.css
@@ -5,12 +5,11 @@
   overflow: hidden;
 }
 
-.header button {
+.header .toggle {
   font-size: 40px;
   font-weight: normal;
-  width: 50px;
-  text-align: center;
   position: absolute;
+  display: inline-block;
   top: 15px;
   left: 10px;
 }
