--- a/src/app/index.css
+++ b/src/app/index.css
@@ -16,7 +16,6 @@ body {
   color: #a7c681;
   font-size: 20px;
   text-align: center;
-  border-bottom: 1px solid #a7c681;
   height: 50px;
   line-height: 50px;
   margin: 0;
@@ -42,7 +41,7 @@ main {
   background-color: #fff;
   flex: 10;
   min-height: 450px;
-  padding: 0;
+  padding: 0 0 2em 0;
   margin: 0 0.5em;
 }
 
@@ -51,3 +50,14 @@ a {
   color: currentColor;
 }
 
+.back-link::before {
+  content: '⬅';
+  margin-right: 0.5em;
+}
+
+.back-link {
+  display: block;
+  padding: 0.5em;
+  text-align: center;
+  color: white;
+}
