--- a/src/app/header/index.css
+++ b/src/app/header/index.css
@@ -23,10 +23,19 @@
 }
 
 .header .monkey {
-  min-width: 30px;
-  max-width: 50px;
-  height: auto;
   position: absolute;
   top: 15px;
   right: 15px;
+  height: 50px;
+}
+
+.spin2,
+.spin {
+  animation: spin 0.5s linear 1;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
