--- a/src/pages/laws/index.css
+++ b/src/pages/laws/index.css
@@ -1,6 +1,6 @@
 .usa-viewport {
   overflow-y: auto;
-  width: 100%
+  width: 100%;
 }
 
 dl {
@@ -28,7 +28,7 @@ dl {
 }
 
 .usa {
-  width: 930px;
+  width: 990px;
   height: 600px;
 }
 
